// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetaInfoDetails should render lastUpdate as JSX Element 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-s-flexStart-center-row"
        data-test-subj="MetaInfoDetailsmetaInfoDetails"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiText emotion-EuiText"
          >
            created_by
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
          data-test-subj="MetaInfoDetailslastUpdate"
        >
          <span
            class="euiBadge emotion-EuiInnerText"
            style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
            title="Last update value"
          >
            <span
              class="euiBadge__content emotion-euiBadge__content"
            >
              <span
                class="euiBadge__text emotion-euiBadge__text"
              >
                <p>
                  Last update value
                </p>
              </span>
            </span>
          </span>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiText emotion-EuiText"
          >
            by
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
          data-test-subj="MetaInfoDetailslastUpdateValue"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-center-row"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <span
                class="euiBadge emotion-EuiInnerText"
                title="value"
              >
                <span
                  class="euiBadge__content emotion-euiBadge__content"
                >
                  <span
                    class="euiBadge__text emotion-euiBadge__text"
                  >
                    value
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-s-flexStart-center-row"
      data-test-subj="MetaInfoDetailsmetaInfoDetails"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiText emotion-EuiText"
        >
          created_by
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
        data-test-subj="MetaInfoDetailslastUpdate"
      >
        <span
          class="euiBadge emotion-EuiInnerText"
          style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
          title="Last update value"
        >
          <span
            class="euiBadge__content emotion-euiBadge__content"
          >
            <span
              class="euiBadge__text emotion-euiBadge__text"
            >
              <p>
                Last update value
              </p>
            </span>
          </span>
        </span>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiText emotion-EuiText"
        >
          by
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
        data-test-subj="MetaInfoDetailslastUpdateValue"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <span
              class="euiBadge emotion-EuiInnerText"
              title="value"
            >
              <span
                class="euiBadge__content emotion-euiBadge__content"
              >
                <span
                  class="euiBadge__text emotion-euiBadge__text"
                >
                  value
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MetaInfoDetails should render lastUpdate as string 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-s-flexStart-center-row"
        data-test-subj="MetaInfoDetailsmetaInfoDetails"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiText emotion-EuiText"
          >
            created_by
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
          data-test-subj="MetaInfoDetailslastUpdate"
        >
          <span
            class="euiBadge emotion-EuiInnerText"
            style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
            title="last update"
          >
            <span
              class="euiBadge__content emotion-euiBadge__content"
            >
              <span
                class="euiBadge__text emotion-euiBadge__text"
              >
                last update
              </span>
            </span>
          </span>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiText emotion-EuiText"
          >
            by
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
          data-test-subj="MetaInfoDetailslastUpdateValue"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-center-row"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <span
                class="euiBadge emotion-EuiInnerText"
                title="value"
              >
                <span
                  class="euiBadge__content emotion-euiBadge__content"
                >
                  <span
                    class="euiBadge__text emotion-euiBadge__text"
                  >
                    value
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-s-flexStart-center-row"
      data-test-subj="MetaInfoDetailsmetaInfoDetails"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiText emotion-EuiText"
        >
          created_by
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
        data-test-subj="MetaInfoDetailslastUpdate"
      >
        <span
          class="euiBadge emotion-EuiInnerText"
          style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
          title="last update"
        >
          <span
            class="euiBadge__content emotion-euiBadge__content"
          >
            <span
              class="euiBadge__text emotion-euiBadge__text"
            >
              last update
            </span>
          </span>
        </span>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiText emotion-EuiText"
        >
          by
        </div>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
        data-test-subj="MetaInfoDetailslastUpdateValue"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-center-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <span
              class="euiBadge emotion-EuiInnerText"
              title="value"
            >
              <span
                class="euiBadge__content emotion-euiBadge__content"
              >
                <span
                  class="euiBadge__text emotion-euiBadge__text"
                >
                  value
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
